# IEEE-service

./: .env.example  .gitignore  README.md  package.json  render.yaml
apps/api/: .env.example  README.md  pyproject.toml
apps/api/app/: __init__.py  main.py
apps/api/app/api/: deps.py
apps/api/app/api/routes/: companies.py  gmail.py  templates.py
apps/api/app/core/: config.py  hackathon.py
apps/api/app/models/: schemas.py
apps/api/app/services/: excel.py  generation_worker.py  gmail.py  openai_pipeline.py  supabase.py
apps/api/tests/: test_contact_discovery_helpers.py  test_excel_parser.py
apps/web/: .env.example  package.json  tailwind.config.ts
apps/web/app/: globals.css  layout.tsx  page.tsx
apps/web/app/companies/[companyId]/: page.tsx
apps/web/app/settings/gmail/: page.tsx
apps/web/app/upload/: page.tsx
apps/web/components/: app-shell.tsx  company-detail-client.tsx  dashboard-client.tsx  gmail-settings-client.tsx  ui.tsx  upload-page-client.tsx
apps/web/components/legacy/: app-shell-legacy.tsx  company-detail-client-legacy.tsx  dashboard-client-legacy.tsx  gmail-settings-client-legacy.tsx  upload-page-client-legacy.tsx
apps/web/lib/: api.ts  campaign-context.ts  layout-variant.ts  owner-key.ts  types.ts  utils.ts
supabase/migrations/: 0001_init.sql  0002_async_generation.sql  0003_contact_outreach.sql  0004_queue_controls.sql
